# ptt-crawl

./: .env.example  .env.firecrawl.example  .gitignore  .pre-commit-config.yaml  README.md  config.example.py  docker-compose.yaml  main.py  pyproject.toml
.claude/: settings.local.json
.gemini/: settings.json
.github/: copilot-instructions.md
.prompts/001-ptt-crawler/: plan.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
examples/: README.md  advanced_crawl.py  basic_usage.py
examples/scripts/: daily_crawl.sh  health_check.py
specs/001-library-ptt-stock/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-library-ptt-stock/contracts/: cli-interface.md  database.md  firecrawl-api.md
specs/001-ptt-crawler/: data-model.md  plan.md  quickstart.md  research.md  spec.md
src/cli/: clean_command.py  config_command.py  crawl_command.py  main.py  status_command.py
src/database/: article_repository.py  config_repository.py  connection.py  crawl_state_repository.py  init.py
src/lib/: config_loader.py  console.py
src/models/: article.py  config.py  crawl_state.py
src/services/: crawl_service.py  firecrawl_service.py  parser_service.py  state_service.py
tests/contract/: test_cli_interface.py  test_database.py  test_firecrawl_api.py
tests/integration/: test_config_management.py  test_crawl_workflow.py  test_error_recovery.py  test_incremental_crawl.py
tests/performance/: test_crawl_performance.py
tests/unit/: test_cli.py  test_models.py  test_parser.py  test_services.py
(+1 files in other folders)
